----------------------------------------------------------------------
 OmegaT 4.1.5 update 1
----------------------------------------------------------------------
  2 Enhancements
  0 Bug fix
  0 Localisation update
----------------------------------------------------------------------
4.1.5 update 1 vs 4.1.5

  Implemented requests:

  - Extract Text Content script to export to UTF-8 
  https://sourceforge.net/p/omegat/feature-requests/1393/

  Other changes:

  - Watson Language Translator: Neural translation is always on, it's 
possible to enter a Model ID in the credential dialog. See
https://sourceforge.net/p/omegat/feature-requests/1389/

----------------------------------------------------------------------
 OmegaT 4.1.5 (2018-06-08)
----------------------------------------------------------------------
  8 Enhancements
  3 Bug fixes
  8 Localisation updates
----------------------------------------------------------------------
4.1.5 vs 4.1.4

  Implemented requests:

  - Port TagWipe from DGT-OmegaT project as an OmegaT script
  https://sourceforge.net/p/omegat/feature-requests/1384/

  - Clarify XLIFF filter options description
  https://sourceforge.net/p/omegat/feature-requests/1387/

  - Add support for Microsoft neural machine translation
  https://sourceforge.net/p/omegat/feature-requests/1366/

  - Watson Language Translator Integration
  https://sourceforge.net/p/omegat/feature-requests/1389/

  - Automatically check for updates 
  https://sourceforge.net/p/omegat/feature-requests/293/

  Other changes:

  - Project > Open Recent Project now remembers up to 10 projects by
default. Existing users should remove the `most_recent_projects_size`
item in the omegat.prefs file to take advantage of this change.

  - Added Project > Open Recent Project > Clear Menu

  - Linux: Updated Kaptain launcher to include fields for new MT credentials. 

  Bug fixes:

  - Infinite loop when searching with no keyword
  https://sourceforge.net/p/omegat/bugs/901/
